--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -34,11 +34,11 @@
 
         <LinearLayout
             android:id="@+id/itemNote_ll_click"
-            style="@style/Note.Click">
+            style="@style/ItemNote.Click">
 
             <TextView
                 android:id="@+id/itemNote_tv_name"
-                style="@style/Note.Name"
+                style="@style/ItemNote.Name"
                 android:text='@{itemNote.name}'
                 android:visibility='@{text.isEmpty(itemNote.name) ? v.GONE : v.VISIBLE}' />
 
@@ -51,12 +51,13 @@
 
                 <ImageView
                     android:id="@+id/itemNote_iv_check_1"
-                    style="@style/Note.Indicator"
+                    style="@style/ItemNote.Indicator"
+                    android:contentDescription="@null"
                     android:src='@{listRoll.size() &gt;= 1 &amp;&amp; listRoll.get(0).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
 
                 <TextView
                     android:id="@+id/itemNote_tv_text_1"
-                    style="@style/Note.Roll"
+                    style="@style/ItemNote.Roll"
                     android:text='@{listRoll.size() &gt;= 1 ? listRoll.get(0).text : @string/test_item_note_roll_1}' />
 
             </LinearLayout>
@@ -71,12 +72,13 @@
 
                 <ImageView
                     android:id="@+id/itemNote_iv_check_2"
-                    style="@style/Note.Indicator"
+                    style="@style/ItemNote.Indicator"
+                    android:contentDescription="@null"
                     android:src='@{listRoll.size() &gt;= 2 &amp;&amp; listRoll.get(1).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
 
                 <TextView
                     android:id="@+id/itemNote_tv_text_2"
-                    style="@style/Note.Roll"
+                    style="@style/ItemNote.Roll"
                     android:text='@{listRoll.size() &gt;= 2 ? listRoll.get(1).text : @string/test_item_note_roll_2}' />
 
             </LinearLayout>
@@ -91,12 +93,13 @@
 
                 <ImageView
                     android:id="@+id/itemNote_iv_check_3"
-                    style="@style/Note.Indicator"
+                    style="@style/ItemNote.Indicator"
+                    android:contentDescription="@null"
                     android:src='@{listRoll.size() &gt;= 3 &amp;&amp; listRoll.get(2).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
 
                 <TextView
                     android:id="@+id/itemNote_tv_text_3"
-                    style="@style/Note.Roll"
+                    style="@style/ItemNote.Roll"
                     android:text='@{listRoll.size() &gt;= 3 ? listRoll.get(2).text : @string/test_item_note_roll_3}' />
 
             </LinearLayout>
@@ -110,12 +113,13 @@
 
                 <ImageView
                     android:id="@+id/itemNote_iv_check_4"
-                    style="@style/Note.Indicator"
+                    style="@style/ItemNote.Indicator"
+                    android:contentDescription="@null"
                     android:src='@{listRoll.size() &gt;= 4 &amp;&amp; listRoll.get(3).check ? @drawable/ic_check_done : @drawable/ic_check_outline}' />
 
                 <TextView
                     android:id="@+id/itemNote_tv_text_4"
-                    style="@style/Note.Roll"
+                    style="@style/ItemNote.Roll"
                     android:text='@{listRoll.size() &gt;= 4 ? listRoll.get(3).text : @string/test_item_note_roll_4}' />
 
             </LinearLayout>
@@ -128,7 +132,8 @@
 
                 <ImageView
                     android:id="@+id/itemNote_iv_rank"
-                    style="@style/Note.Indicator"
+                    style="@style/ItemNote.Indicator"
+                    android:contentDescription="@null"
                     android:layout_marginEnd="@dimen/item_layout_small_indent"
                     android:layout_marginRight="@dimen/item_layout_small_indent"
                     android:visibility='@{itemNote.rankId.length == 0 ? v.GONE : v.VISIBLE}'
@@ -136,7 +141,8 @@
 
                 <ImageView
                     android:id="@+id/itemNote_iv_bind"
-                    style="@style/Note.Indicator"
+                    style="@style/ItemNote.Indicator"
+                    android:contentDescription="@null"
                     android:layout_marginEnd="@dimen/item_layout_small_indent"
                     android:layout_marginRight="@dimen/item_layout_small_indent"
                     android:visibility='@{itemNote.status ? v.VISIBLE : v.GONE}'
@@ -144,20 +150,20 @@
 
                 <TextView
                     android:id="@+id/itemNote_tv_text"
-                    style="@style/Note.Info"
+                    style="@style/ItemNote.Info"
                     android:layout_width="wrap_content"
                     android:text='@{itemNote.text}' />
 
                 <TextView
                     android:id="@+id/itemNote_tv_change"
-                    style="@style/Note.Info"
+                    style="@style/ItemNote.Info"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text='@{Time.formatNoteDate(context, itemNote.change)}' />
 
                 <TextView
                     android:id="@+id/itemNote_tv_create"
-                    style="@style/Note.Info"
+                    style="@style/ItemNote.Info"
                     android:layout_width="wrap_content"
                     android:text='@{Time.formatNoteDate(context, itemNote.create)}' />
 
