--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -46,6 +46,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/item_layout_medium_indent"
                 android:orientation="horizontal">
 
                 <ImageView
