Добавил стили, переделал настройки, начал внедрение тёмной темы, разбор в цветах

--- a/app/src/main/res/layout-v21/inc_toolbar_note.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar_note.xml
@@ -55,8 +55,8 @@
                     android:maxLines="1"
                     android:scrollHorizontally="true"
                     android:text='@={itemNote.name}'
-                    android:textColor="@color/colorDark"
-                    android:textColorHint="@color/colorDark"
+                    android:textColor="@color/colorIcon"
+                    android:textColorHint="@color/colorIcon"
                     android:visibility='@{keyEdit ? v.VISIBLE : v.GONE}' />
 
                 <HorizontalScrollView
@@ -77,8 +77,8 @@
                         android:maxLength="50"
                         android:maxLines="1"
                         android:text='@{itemNote.name}'
-                        android:textColor="@color/colorDark"
-                        android:textColorHint="@color/colorDark"
+                        android:textColor="@color/colorIcon"
+                        android:textColorHint="@color/colorIcon"
                         android:textIsSelectable="true" />
 
                 </HorizontalScrollView>
