--- a/app/src/main/res/layout/item_roll_read.xml
+++ b/app/src/main/res/layout/item_roll_read.xml
@@ -21,49 +21,49 @@
     <androidx.cardview.widget.CardView
         style="@style/ItemCardView"
         app:cardBackgroundColor="@color/colorPrimary"
-        app:cardUseCompatPadding="false"
-        app:cardCornerRadius="@dimen/card_corner_radius">
+        app:cardCornerRadius="@dimen/card_corner_radius"
+        app:cardUseCompatPadding="false">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
-            <CheckBox
-                android:id="@+id/itemRoll_cb_check"
+            <FrameLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:checked='@{itemRoll.check}'
-                android:clickable="false" />
+                android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/itemRoll_iv_click"
+                <CheckBox
+                    android:id="@+id/itemRoll_cb_check"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
+                    android:checked='@{itemRoll.check}'
+                    android:clickable="false" />
+
+                <ImageView
+                    android:id="@+id/itemRoll_iv_click"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:visibility='@{keyBin ? v.INVISIBLE : v.VISIBLE}' />
+
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/itemRoll_tv_text"
+                style="@style/EditText"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?attr/selectableItemBackground"
-                android:contentDescription="@null"
-                android:visibility='@{keyBin ? v.INVISIBLE : v.VISIBLE}' />
-
-        </FrameLayout>
-
-        <TextView
-            android:id="@+id/itemRoll_tv_text"
-            style="@style/EditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autoLink="all"
-            android:background="@color/colorWhite"
-            android:gravity="top"
-            android:linksClickable="true"
-            android:minHeight="32dp"
-            android:padding="@dimen/item_layout_medium_indent"
-            android:text='@{itemRoll.text}'
-            android:textIsSelectable="true"
-            android:textSize="@dimen/text_big_size" />
+                android:layout_height="wrap_content"
+                android:autoLink="all"
+                android:background="@android:color/transparent"
+                android:gravity="top"
+                android:linksClickable="true"
+                android:minHeight="32dp"
+                android:padding="@dimen/item_layout_medium_indent"
+                android:text='@{itemRoll.text}'
+                android:textIsSelectable="true"
+                android:textSize="@dimen/text_big_size" />
 
         </LinearLayout>
 
