--- a/app/src/main/res/values/style_app.xml
+++ b/app/src/main/res/values/style_app.xml
@@ -3,14 +3,14 @@
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorDarkSecond</item>
+        <item name="colorPrimaryDark">@color/colorPrimarySecond</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="AppTheme.AppBarTheme" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:textColorPrimary">@color/colorDark</item>
-        <item name="android:textColorSecondary">@color/colorDark</item>
-        <item name="actionMenuTextColor">@color/colorDark</item>
+        <item name="android:textColorPrimary">@color/colorText</item>
+        <item name="android:textColorSecondary">@color/colorText</item>
+        <item name="actionMenuTextColor">@color/colorText</item>
     </style>
 
     <style name="AppTheme.AlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
