--- a/app/src/main/res/values/values_settings.xml
+++ b/app/src/main/res/values/values_settings.xml
@@ -2,15 +2,17 @@
 <resources>
 
     <!-- Settings values -->
-    <integer name="pref_default_color_create">10</integer>
+    <integer name="pref_default_color">10</integer>
     <bool name="pref_default_pause_save">false</bool>
     <bool name="pref_default_auto_save">false</bool>
-    <integer name="pref_default_auto_save_time">0</integer>
+    <integer name="pref_default_save_time">0</integer>
 
-    <integer-array name="pref_value_auto_save_time">
+    <integer-array name="pref_value_save_time">
         <item>60000</item>  <!-- 1 минута -->
         <item>180000</item> <!-- 3 минуты -->
         <item>420000</item> <!-- 7 минут -->
     </integer-array>
+
+    <integer name="pref_default_theme">0</integer>
 
 </resources>
