--- a/app/src/main/res/animator/eye_path_off.xml
+++ b/app/src/main/res/animator/eye_path_off.xml
@@ -5,8 +5,8 @@
         android:duration="@android:integer/config_shortAnimTime"
         android:interpolator="@android:anim/accelerate_decelerate_interpolator"
         android:propertyName="fillColor"
-        android:valueFrom="@color/colorDark"
-        android:valueTo="@color/colorDarkSecond"
+        android:valueFrom="@color/colorIcon"
+        android:valueTo="@color/colorIconSecond"
         android:valueType="colorType" />
 
 </set>
