--- a/app/src/main/res/layout/frg_roll.xml
+++ b/app/src/main/res/layout/frg_roll.xml
@@ -53,7 +53,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorWhite"
+                android:background="@color/colorPrimary"
                 android:orientation="horizontal"
                 android:padding="@dimen/item_layout_small_indent">
 
