--- a/app/src/main/res/layout/view_about.xml
+++ b/app/src/main/res/layout/view_about.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/app_name"
-                android:textColor="@color/colorDark"
+                android:textColor="@color/colorText"
                 android:textSize="@dimen/text_big_size" />
 
             <TextView
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/about_app_for"
-                android:textColor="@color/colorDarkSecond"
+                android:textColor="@color/colorTextSecond"
                 android:textSize="@dimen/text_small_size" />
 
             <LinearLayout
@@ -66,7 +66,7 @@
                     android:layout_weight="0.5"
                     android:gravity="center"
                     android:text="@string/about_app_developer"
-                    android:textColor="@color/colorDark"
+                    android:textColor="@color/colorText"
                     android:textSize="@dimen/text_medium_size" />
 
                 <TextView
@@ -75,7 +75,7 @@
                     android:layout_weight="0.5"
                     android:gravity="center"
                     android:text="@string/about_app_logo_designer"
-                    android:textColor="@color/colorDark"
+                    android:textColor="@color/colorText"
                     android:textSize="@dimen/text_medium_size" />
             </LinearLayout>
         </LinearLayout>
@@ -92,7 +92,7 @@
             android:layout_height="wrap_content"
             android:gravity="start"
             android:text="@string/about_app_used_libraries"
-            android:textColor="@color/colorDark"
+            android:textColor="@color/colorText"
             android:textSize="@dimen/text_medium_size"
             />
 
@@ -101,7 +101,7 @@
             android:layout_height="wrap_content"
             android:gravity="start"
             android:text="@string/about_app_libraries"
-            android:textColor="@color/colorDarkSecond"
+            android:textColor="@color/colorTextSecond"
             android:textSize="@dimen/text_small_size" />
 
     </LinearLayout>
@@ -112,7 +112,7 @@
         android:gravity="center"
         android:layout_marginTop="@dimen/item_layout_small_indent"
         android:text="@string/about_app_version"
-        android:textColor="@color/colorDark"
+        android:textColor="@color/colorText"
         android:textSize="@dimen/text_small_size" />
 
 </LinearLayout>
