--- a/app/src/main/res/values-ru/string_settings.xml
+++ b/app/src/main/res/values-ru/string_settings.xml
@@ -19,10 +19,10 @@
     <!-- Note -->
     <string name="pref_header_note">Заметки</string>
 
-    <string name="pref_title_color_create">Цвет заметки по-умолчанию</string>
-    <string name="pref_summary_color_create">Будет применяться по-умолчанию</string>
+    <string name="pref_title_color">Цвет заметки по-умолчанию</string>
+    <string name="pref_summary_color">Будет применяться по-умолчанию</string>
 
-    <string-array name="pref_text_color_create">
+    <string-array name="pref_text_color">
         <item>Красный</item>
         <item>Фиолетовый</item>
         <item>Индиго</item>
@@ -42,8 +42,8 @@
     <string name="pref_title_auto_save">Автоматическое сохранение</string>
     <string name="pref_summary_auto_save">При редактировании заметки</string>
 
-    <string name="pref_title_auto_save_time">Период</string>
-    <string name="pref_summary_auto_save_time">Количество минут</string>
+    <string name="pref_title_save_time">Период</string>
+    <string name="pref_summary_save_time">Количество минут</string>
 
     <string-array name="pref_text_save_time">
         <item>1 минута</item>
@@ -53,6 +53,14 @@
 
     <!-- Other -->
     <string name="pref_header_other">Прочее</string>
+
+    <string name="pref_title_theme">Тема приложения</string>
+    <string name="pref_summary_theme">Выбранная тема</string>
+
+    <string-array name="pref_text_theme">
+        <item>Белая</item>
+        <item>Чёрная</item>
+    </string-array>
 
     <string name="pref_title_about">О приложении</string>
 
