--- a/app/src/main/res/values-v23/style_app.xml
+++ b/app/src/main/res/values-v23/style_app.xml
@@ -9,9 +9,9 @@
     </style>
 
     <style name="AppTheme.AppBarTheme" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:textColorPrimary">@color/colorDark</item>
-        <item name="android:textColorSecondary">@color/colorDark</item>
-        <item name="actionMenuTextColor">@color/colorDark</item>
+        <item name="android:textColorPrimary">@color/colorText</item>
+        <item name="android:textColorSecondary">@color/colorText</item>
+        <item name="actionMenuTextColor">@color/colorText</item>
     </style>
 
     <style name="AppTheme.AlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
