--- a/app/src/main/res/values/style_item_note.xml
+++ b/app/src/main/res/values/style_item_note.xml
@@ -15,7 +15,7 @@
         <item name="android:layout_width">@dimen/icon_small_size</item>
         <item name="android:layout_height">@dimen/icon_small_size</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:tint">@color/colorDark</item>
+        <item name="android:tint">@color/colorText</item>
     </style>
 
     <style name="ItemNote.Name">
@@ -24,7 +24,7 @@
         <item name="android:layout_marginBottom">@dimen/item_layout_medium_indent</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
-        <item name="android:textColor">@color/colorDark</item>
+        <item name="android:textColor">@color/colorText</item>
         <item name="android:textSize">@dimen/text_big_size</item>
     </style>
 
@@ -33,7 +33,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">5</item>
-        <item name="android:textColor">@color/colorDark</item>
+        <item name="android:textColor">@color/colorText</item>
         <item name="android:textSize">@dimen/text_medium_size</item>
     </style>
 
@@ -44,7 +44,7 @@
         <item name="android:layout_marginLeft">@dimen/item_layout_small_indent</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
-        <item name="android:textColor">@color/colorDark</item>
+        <item name="android:textColor">@color/colorText</item>
         <item name="android:textSize">@dimen/text_medium_size</item>
     </style>
 
@@ -53,7 +53,7 @@
         <item name="android:layout_marginRight">@dimen/item_layout_small_indent</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
-        <item name="android:textColor">@color/colorDark</item>
+        <item name="android:textColor">@color/colorText</item>
         <item name="android:textSize">@dimen/text_small_size</item>
     </style>
 
